Revision history for Net-ISC-DHCPd

0.03 Tue Juli 21 15:41:01 CET 2009
   * add types for coercion support
   * can talk with the DHCP server, using omshell
     + stop remote server
     + read leases
     - write leases (should work)
     + read host
     - write hosts (should work)
     - read/write groups (should work)

0.02 Tue Juli 21 15:41:01 CET 2009
   * can parse leases
   * can test leases and config file

0.01 Sun May 17 23:45:00 CET 2009
   * parsing of config works
   * generating config works
