@@ -45,4 +45,5 @@ shared-network {
 host foo {
   fixed-address 10.19.83.102;
   hardware ethernet 00:0e:35:d1:27:e3;
+  filename "pxelinux.0";
 }
